--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-SO3D6J2O.js"><link rel="modulepreload" href="chunk-6CAN53FR.js"><script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-4DXJNEWB.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-SO3D6J2O.js"><link rel="modulepreload" href="chunk-6CAN53FR.js"><script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-WQ7HXV2X.js" type="module"></script></body>
 
 </html>
